overlap fix

--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -8,6 +8,7 @@
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap-reverse;
+    min-height: 450px;
 
 }
 
