--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -32,6 +32,7 @@ body{
     flex-wrap: wrap;
     font-family: 'Cormorant Garamond', serif;
     font-weight: 400;
+    min-width: 300px;
 }
 
 @media screen and (max-width: 1300px) {
