--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,6 +4,7 @@
 
 .front-page{
     height: 100vh;
+    min-height: 350px;
 }
 .typing1{
     margin-top: 80px;
@@ -29,6 +30,7 @@
     flex-direction: column;
     flex-wrap: wrap;
     height: 100vh;
+    min-height: 450px;
 }
 
 .row{
@@ -116,6 +118,7 @@
     flex-direction: column;
     flex-wrap: nowrap;
     height: 100vh;
+    min-height: 450px;
 }
 .paragh{
     display: flex;
